src/output/snapshots/transmute__output__html__tests__serialize_struct.snap
---
source: src/output/html.rs
expression: "&html"
---
<!DOCTYPE html>
<html>
<head>
    <style>
        body {
            background-color: #222;
        }

        * {
            font-family: monospace;
            color: #a9b7c6;
            cursor: default;
        }

        .line {
            position: absolute;
            left:0;
        }

        ul {
            padding: 0;
        }

        li {
            list-style: none;
            padding-left: 2em;
        }

        span {
            display: inline-block;
        }

        .kw {
            font-weight: bold;
            color: #cc7832;
        }

        .implicit.kw {
            font-weight: normal;
        }

        .num {
            color: #6897bb;
        }

        .ident, .ident_ref {
            cursor: pointer;
        }

        .ident_ref {
            text-decoration: underline dotted;
        }

        .ident:hover, .ident_ref:hover {
            background-color: blue;
            color: white;
        }

        .to {
            background-color: green;
            color: white;
        }

        .same {
            background-color: orange;
            color: black;
        }
    </style>
    <script
            src="https://code.jquery.com/jquery-3.7.1.slim.min.js"
            integrity="sha256-kmHvs0B+OpCW5GVHUNjv9rOmY0IvSIRcf7zGUDTDQM8="
            crossorigin="anonymous"></script>
    <script>
        $(document).ready(function () {
            $("li").filter((_, e) => $(e).children("ul").length === 0).each((i, e) => {
                $(e).prepend("<span class=\"line\">" + (i + 1) + "</span>");
            });
            $("[data-ident-ref],[data-type-ref]")
                .on("mousemove", (e) => {
                    let self = $(e.currentTarget);

                    let ref_attr = "data-ident-ref";
                    if (e.ctrlKey) {
                        ref_attr = "data-type-ident-ref";
                    }

                    let ref = self.attr(ref_attr);

                    $(".to").removeClass("to");
                    $(".same").removeClass("same");
                    $("[" + ref_attr + "=" + ref + "]").addClass("same");
                    $("#" + ref).addClass("to");

                    e.stopImmediatePropagation();
                })
            .on("mouseout", (e) => {
                $(".to").removeClass("to");
                $(".same").removeClass("same");
            });
            $("[data-par-id]")
                .on("mouseover", (e) => {
                    let self = $(e.currentTarget);
                    $("[data-par-id=" + self.attr("data-par-id") + "]").addClass("same");
                })
                .on("mouseout", (e) => {
                    let self = $(e.currentTarget);
                    $("[data-par-id=" + self.attr("data-par-id") + "]").removeClass("same");
                });
        });
    </script>
</head>
<body>
<ul>
  <li>
    <span class="kw">struct</span>
    <span id="ident__stmt0" class="ident">Point</span>
    <span class="curly" data-par-id="par_0">{</span>
  </li>
  <li>
    <ul>
      <li>
        <span id="ident__stmt0_index0" class="ident">x</span>
        <span class="colon">: </span>
        <span class="ident_ref" title="" data-ident-ref="ident__native-type_number" data-type-ident-ref="">number</span>
        <span class="comma">, </span>
      </li>
      <li>
        <span id="ident__stmt0_index1" class="ident">y</span>
        <span class="colon">: </span>
        <span class="ident_ref" title="" data-ident-ref="ident__native-type_boolean" data-type-ident-ref="">boolean</span>
        <span class="comma">, </span>
      </li>
    </ul>
  </li>
  <li>
    <span class="curly" data-par-id="par_0">}</span>
  </li>
  <li>
    <span class="kw">let</span>
    <span id="ident__stmt1" class="ident">p</span>
    <span class="equal"> = </span>
    <span class="ident_ref" title="struct Point" data-ident-ref="ident__stmt0" data-type-ident-ref="ident__stmt0">Point</span>
    <span class="curly" data-par-id="par_1">{</span>
    <span class="ident_ref" title="number" data-ident-ref="ident__stmt0_index0" data-type-ident-ref="">x</span>
    <span class="colon">: </span>
    <span class="num" title="number">1</span>
    <span class="comma">, </span>
    <span class="ident_ref" title="boolean" data-ident-ref="ident__stmt0_index1" data-type-ident-ref="">y</span>
    <span class="colon">: </span>
    <span class="boolean" title="boolean">false</span>
    <span class="curly" data-par-id="par_1">}</span>
    <span class="semicolon">;</span>
  </li>
  <li>
    <span class="ident_ref" title="struct Point" data-ident-ref="ident__stmt1" data-type-ident-ref="ident__stmt0">p</span>
    <span class="dot">.</span>
    <span class="ident_ref" title="number" data-ident-ref="ident__stmt0_index0" data-type-ident-ref="">x</span>
    <span class="semicolon">;</span>
  </li>
  <li>
    <span class="ident_ref" title="struct Point" data-ident-ref="ident__stmt1" data-type-ident-ref="ident__stmt0">p</span>
    <span class="dot">.</span>
    <span class="ident_ref" title="boolean" data-ident-ref="ident__stmt0_index1" data-type-ident-ref="">y</span>
    <span class="semicolon">;</span>
  </li>
</ul>
</body>
</html>

